--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,198 +1,99 @@
-<!-- Header -->
-<header class="masthead">
-    <div class="container">
-      <div class="intro-text">
-        <div class="intro-lead-in">Welcome</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-      </div>
-    </div>
-</header>
+<%- include('partials/header'); -%>
 
-<!-- Services -->
-<section id="about">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 text-center">
-              <h2 class="section-heading text-uppercase">Services</h2>
-              <h3 class="section-subheading text-muted">Services provided by our website</h3>
-            </div>
-          </div>
-          <div class="row text-center">
-            <div class="col-md-4">
-              <span class="fa-stack fa-4x">
-                <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                <i class="fas fa-edit fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Create Test</h4>
-              <p class="text-muted">Create test for your school or organization</p>
-            </div>
-            <div class="col-md-4">
-              <span class="fa-stack fa-4x">
-                <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Analysis</h4>
-              <p class="text-muted">Check your score right after taking test</p>
-            </div>
-            <div class="col-md-4">
-              <span class="fa-stack fa-4x">
-                <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                <i class="fas fa-users fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Participation</h4>
-              <p class="text-muted">No limit on number of participants</p>
-            </div>
-          </div>
-        </div>
-      </section>
-  
-  
-      <!-- Team -->
-      <section class="bg-verydark" id="team" style="padding-bottom:0;">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 text-center">
-              <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-              <h3 class="section-subheading text-muted"></h3>
-            </div>
-          </div>
 
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
-                <h4 class="raleway">Manvendra Dattatrey</h4>
-                <p class="text-muted">Student</p>
-                <ul class="list-inline social-buttons">
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                <h4 class="raleway">Austin Kispotta</h4>
-                <p class="text-muted">Student</p>
-                <ul class="list-inline social-buttons">
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                <h4 class="raleway">Vikash Kumar</h4>
-                <p class="text-muted">Student</p>
-                <ul class="list-inline social-buttons">
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+<div id="game">
+    <div class="cellprefix">8</div>
+    <div class="gamecell" id="1_8"></div>
+    <div class="gamecell grey" id="2_8"></div>
+    <div class="gamecell" id="3_8"></div>
+    <div class="gamecell grey" id="4_8"></div>
+    <div class="gamecell" id="5_8"></div>
+    <div class="gamecell grey" id="6_8"></div>
+    <div class="gamecell" id="7_8"></div>
+    <div class="gamecell grey" id="8_8"></div>
 
-                
-        </div>
-      </section>
+    <div class="cellprefix">7</div>
+    <div class="gamecell grey" id="1_7"></div>
+    <div class="gamecell" id="2_7"></div>
+    <div class="gamecell grey" id="3_7"></div>
+    <div class="gamecell" id="4_7"></div>
+    <div class="gamecell grey" id="5_7"></div>
+    <div class="gamecell" id="6_7"></div>
+    <div class="gamecell grey" id="7_7"></div>
+    <div class="gamecell" id="8_7"></div>
 
-      <section class="bg-verydark" id="team" style="padding-top:20px;">
-        
+    <div class="cellprefix">6</div>
+    <div class="gamecell" id="1_6"></div>
+    <div class="gamecell grey" id="2_6"></div>
+    <div class="gamecell" id="3_6"></div>
+    <div class="gamecell grey" id="4_6"></div>
+    <div class="gamecell" id="5_6"></div>
+    <div class="gamecell grey" id="6_6"></div>
+    <div class="gamecell" id="7_6"></div>
+    <div class="gamecell grey" id="8_6"></div>
 
-            <div class="row">
-              <div class="col-sm-2"></div>
-              <div class="col-sm-4">
-                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                  <h4 class="raleway">Praful Tondomker</h4>
-                  <p class="text-muted">Student</p>
-                  <ul class="list-inline social-buttons">
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-linkedin-in"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="">
-                  <h4 class="raleway">Reena Yadav</h4>
-                  <p class="text-muted">Student</p>
-                  <ul class="list-inline social-buttons">
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-linkedin-in"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-sm-2"></div>
-              </div>
-              </div>
-              
-             
-  
-                
-          </div>
-        </section>
+    <div class="cellprefix">5</div>
+    <div class="gamecell grey" id="1_5"></div>
+    <div class="gamecell" id="2_5"></div>
+    <div class="gamecell grey" id="3_5"></div>
+    <div class="gamecell" id="4_5"></div>
+    <div class="gamecell grey" id="5_5"></div>
+    <div class="gamecell" id="6_5"></div>
+    <div class="gamecell grey" id="7_5"></div>
+    <div class="gamecell" id="8_5"></div>
+
+    <div class="cellprefix">4</div>
+    <div class="gamecell" id="1_4"></div>
+    <div class="gamecell grey" id="2_4"></div>
+    <div class="gamecell" id="3_4"></div>
+    <div class="gamecell grey" id="4_4"></div>
+    <div class="gamecell" id="5_4"></div>
+    <div class="gamecell grey" id="6_4"></div>
+    <div class="gamecell" id="7_4"></div>
+    <div class="gamecell grey" id="8_4"></div>
+
+    <div class="cellprefix">3</div>
+    <div class="gamecell grey" id="1_3"></div>
+    <div class="gamecell" id="2_3"></div>
+    <div class="gamecell grey" id="3_3"></div>
+    <div class="gamecell" id="4_3"></div>
+    <div class="gamecell grey" id="5_3"></div>
+    <div class="gamecell" id="6_3"></div>
+    <div class="gamecell grey" id="7_3"></div>
+    <div class="gamecell" id="8_3"></div>
+
+    <div class="cellprefix">2</div>
+    <div class="gamecell" id="1_2"></div>
+    <div class="gamecell grey" id="2_2"></div>
+    <div class="gamecell" id="3_2"></div>
+    <div class="gamecell grey" id="4_2"></div>
+    <div class="gamecell" id="5_2"></div>
+    <div class="gamecell grey" id="6_2"></div>
+    <div class="gamecell" id="7_2"></div>
+    <div class="gamecell grey" id="8_2"></div>
+
+    <div class="cellprefix">8</div>
+    <div class="gamecell grey" id="1_1"></div>
+    <div class="gamecell" id="2_1"></div>
+    <div class="gamecell grey" id="3_1"></div>
+    <div class="gamecell" id="4_1"></div>
+    <div class="gamecell grey" id="5_1"></div>
+    <div class="gamecell" id="6_1"></div>
+    <div class="gamecell grey" id="7_1"></div>
+    <div class="gamecell" id="8_1"></div>
+
+    <div></div>
+    <div class="cellprefix">a</div>
+    <div class="cellprefix">b</div>
+    <div class="cellprefix">c</div>
+    <div class="cellprefix">d</div>
+    <div class="cellprefix">e</div>
+    <div class="cellprefix">f</div>
+    <div class="cellprefix">g</div>
+    <div class="cellprefix">h</div>
+
+    <div id="turn">It's White's Turn</div>
+</div>
+
+
+<%- include('partials/footer'); -%>
