--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,6 +1,4 @@
 html,body {
-    width: 100%;
-    height: 100%;
     padding: 0;
     margin: 0;
 }
@@ -8,7 +6,6 @@ html,body {
 div *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 #turn {
@@ -33,9 +30,14 @@ div *{
 
 #game {
     max-height: 504px;
-    max-height: 504px;
-    width: 100%;
-    height: 100%;
+    max-width: 504px;
     position: relative;
     margin: 20px auto;
+}
+
+.cellprefix {
+    max-width: 20px;
+    max-width: 20px;
+    width: 100%;
+    height: 100%;
 }
