--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,87 +2,87 @@
 
 
 <div id="game">
-    <div class="cellprefix">8</div>
-    <div class="gamecell" id="1_8"></div>
-    <div class="gamecell grey" id="2_8"></div>
-    <div class="gamecell" id="3_8"></div>
-    <div class="gamecell grey" id="4_8"></div>
-    <div class="gamecell" id="5_8"></div>
-    <div class="gamecell grey" id="6_8"></div>
-    <div class="gamecell" id="7_8"></div>
-    <div class="gamecell grey" id="8_8"></div>
+    <!-- <div class="cellprefix">8</div> -->
+    <div row="8" column="1" class="white" player="black" piece="rook"></div>
+    <div row="8" column="2" class="grey" player="black" piece="knight"></div>
+    <div row="8" column="3" class="white" player="black" piece="bishop"></div>
+    <div row="8" column="4" class="grey" player="black" piece="king"></div>
+    <div row="8" column="5" class="white" player="black" piece="queen"></div>
+    <div row="8" column="6" class="grey" player="black" piece="bishop"></div>
+    <div row="8" column="7" class="white" player="black" piece="knight"></div>
+    <div row="8" column="8" class="grey" player="black" piece="rook"></div>
 
-    <div class="cellprefix">7</div>
-    <div class="gamecell grey" id="1_7"></div>
-    <div class="gamecell" id="2_7"></div>
-    <div class="gamecell grey" id="3_7"></div>
-    <div class="gamecell" id="4_7"></div>
-    <div class="gamecell grey" id="5_7"></div>
-    <div class="gamecell" id="6_7"></div>
-    <div class="gamecell grey" id="7_7"></div>
-    <div class="gamecell" id="8_7"></div>
+    <!-- <div class="cellprefix">7</div> -->
+    <div row="7" column="1" class="grey" player="black" piece="pawn"></div>
+    <div row="7" column="2" class="white" player="black" piece="pawn"></div>
+    <div row="7" column="3" class="grey" player="black" piece="pawn"></div>
+    <div row="7" column="4" class="white" player="black" piece="pawn"></div>
+    <div row="7" column="5" class="grey" player="black" piece="pawn"></div>
+    <div row="7" column="6" class="white" player="black" piece="pawn"></div>
+    <div row="7" column="7" class="grey" player="black" piece="pawn"></div>
+    <div row="7" column="8" class="white" player="black" piece="pawn"></div>
 
-    <div class="cellprefix">6</div>
-    <div class="gamecell" id="1_6"></div>
-    <div class="gamecell grey" id="2_6"></div>
-    <div class="gamecell" id="3_6"></div>
-    <div class="gamecell grey" id="4_6"></div>
-    <div class="gamecell" id="5_6"></div>
-    <div class="gamecell grey" id="6_6"></div>
-    <div class="gamecell" id="7_6"></div>
-    <div class="gamecell grey" id="8_6"></div>
+    <!-- <div class="cellprefix">6</div> -->
+    <div row="6" column="1" class="white" player="" piece=""></div>
+    <div row="6" column="2" class="grey" player="" piece=""></div>
+    <div row="6" column="3" class="white" player="" piece=""></div>
+    <div row="6" column="4" class="grey" player="" piece=""></div>
+    <div row="6" column="5" class="white" player="" piece=""></div>
+    <div row="6" column="6" class="grey" player="" piece=""></div>
+    <div row="6" column="7" class="white" player="" piece=""></div>
+    <div row="6" column="8" class="grey" player="" piece=""></div>
 
-    <div class="cellprefix">5</div>
-    <div class="gamecell grey" id="1_5"></div>
-    <div class="gamecell" id="2_5"></div>
-    <div class="gamecell grey" id="3_5"></div>
-    <div class="gamecell" id="4_5"></div>
-    <div class="gamecell grey" id="5_5"></div>
-    <div class="gamecell" id="6_5"></div>
-    <div class="gamecell grey" id="7_5"></div>
-    <div class="gamecell" id="8_5"></div>
+    <!-- <div class="cellprefix">5</div> -->
+    <div row="5" column="1" class="grey" player="" piece=""></div>
+    <div row="5" column="2" class="white" player="" piece=""></div>
+    <div row="5" column="3" class="grey" player="" piece=""></div>
+    <div row="5" column="4" class="white" player="" piece=""></div>
+    <div row="5" column="5" class="grey" player="" piece=""></div>
+    <div row="5" column="6" class="white" player="" piece=""></div>
+    <div row="5" column="7" class="grey" player="" piece=""></div>
+    <div row="5" column="8" class="white" player="" piece=""></div>
 
-    <div class="cellprefix">4</div>
-    <div class="gamecell" id="1_4"></div>
-    <div class="gamecell grey" id="2_4"></div>
-    <div class="gamecell" id="3_4"></div>
-    <div class="gamecell grey" id="4_4"></div>
-    <div class="gamecell" id="5_4"></div>
-    <div class="gamecell grey" id="6_4"></div>
-    <div class="gamecell" id="7_4"></div>
-    <div class="gamecell grey" id="8_4"></div>
+    <!-- <div class="cellprefix">4</div> -->
+    <div row="4" column="1" class="white" player="" piece=""></div>
+    <div row="4" column="2" class="grey" player="" piece=""></div>
+    <div row="4" column="3" class="white" player="" piece=""></div>
+    <div row="4" column="4" class="grey" player="" piece=""></div>
+    <div row="4" column="5" class="white" player="" piece=""></div>
+    <div row="4" column="6" class="grey" player="" piece=""></div>
+    <div row="4" column="7" class="white" player="" piece=""></div>
+    <div row="4" column="8" class="grey" player="" piece=""></div>
 
-    <div class="cellprefix">3</div>
-    <div class="gamecell grey" id="1_3"></div>
-    <div class="gamecell" id="2_3"></div>
-    <div class="gamecell grey" id="3_3"></div>
-    <div class="gamecell" id="4_3"></div>
-    <div class="gamecell grey" id="5_3"></div>
-    <div class="gamecell" id="6_3"></div>
-    <div class="gamecell grey" id="7_3"></div>
-    <div class="gamecell" id="8_3"></div>
+    <!-- <div class="cellprefix">3</div> -->
+    <div row="3" column="1" class="grey" player="" piece=""></div>
+    <div row="3" column="2" class="white" player="" piece=""></div>
+    <div row="3" column="3" class="grey" player="" piece=""></div>
+    <div row="3" column="4" class="white" player="" piece=""></div>
+    <div row="3" column="5" class="grey" player="" piece=""></div>
+    <div row="3" column="6" class="white" player="" piece=""></div>
+    <div row="3" column="7" class="grey" player="" piece=""></div>
+    <div row="3" column="8" class="white" player="" piece=""></div>
 
-    <div class="cellprefix">2</div>
-    <div class="gamecell" id="1_2"></div>
-    <div class="gamecell grey" id="2_2"></div>
-    <div class="gamecell" id="3_2"></div>
-    <div class="gamecell grey" id="4_2"></div>
-    <div class="gamecell" id="5_2"></div>
-    <div class="gamecell grey" id="6_2"></div>
-    <div class="gamecell" id="7_2"></div>
-    <div class="gamecell grey" id="8_2"></div>
+    <!-- <div class="cellprefix">2</div> -->
+    <div row="2" column="1" class="white" player="white" piece="pawn"></div>
+    <div row="2" column="2" class="grey" player="white" piece="pawn"></div>
+    <div row="2" column="3" class="white" player="white" piece="pawn"></div>
+    <div row="2" column="4" class="grey" player="white" piece="pawn"></div>
+    <div row="2" column="5" class="white" player="white" piece="pawn"></div>
+    <div row="2" column="6" class="grey" player="white" piece="pawn"></div>
+    <div row="2" column="7" class="white" player="white" piece="pawn"></div>
+    <div row="2" column="8" class="grey" player="white" piece="pawn"></div>
 
-    <div class="cellprefix">8</div>
-    <div class="gamecell grey" id="1_1"></div>
-    <div class="gamecell" id="2_1"></div>
-    <div class="gamecell grey" id="3_1"></div>
-    <div class="gamecell" id="4_1"></div>
-    <div class="gamecell grey" id="5_1"></div>
-    <div class="gamecell" id="6_1"></div>
-    <div class="gamecell grey" id="7_1"></div>
-    <div class="gamecell" id="8_1"></div>
+    <!-- <div class="cellprefix">1</div> -->
+    <div row="1" column="1" class="grey" player="white" piece="rook"></div>
+    <div row="1" column="2" class="white" player="white" piece="knight"></div>
+    <div row="1" column="3" class="grey" player="white" piece="bishop"></div>
+    <div row="1" column="4" class="white" player="white" piece="queen"></div>
+    <div row="1" column="5" class="grey" player="white" piece="king"></div>
+    <div row="1" column="6" class="white" player="white" piece="bishop"></div>
+    <div row="1" column="7" class="grey" player="white" piece="knight"></div>
+    <div row="1" column="8" class="white" player="white" piece="rook"></div>
 
-    <div></div>
+    <!-- <div></div>
     <div class="cellprefix">a</div>
     <div class="cellprefix">b</div>
     <div class="cellprefix">c</div>
@@ -90,7 +90,7 @@
     <div class="cellprefix">e</div>
     <div class="cellprefix">f</div>
     <div class="cellprefix">g</div>
-    <div class="cellprefix">h</div>
+    <div class="cellprefix">h</div> -->
 
     <div id="turn">It's White's Turn</div>
 </div>
